--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@types/express": "^4.17.6",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "soap": "^0.31.0"
+    "express": "^4.17.1"
   }
 }
