--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.6",
+    "@types/ws": "^7.2.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^7.3.0"
   }
 }
