--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "weather-dev": "ts-node src/weather-ws-server",
-    "next-dev": "next",
-    "next-build": "next build",
-    "next-start": "next start"
+    "next-dev": "cd next-app && next",
+    "next-build": "cd next-app && next build",
+    "next-start": "cd next-app && next start"
   },
   "files": [
     "dist"
