--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.6",
+    "@types/fs-extra": "^9.0.1",
     "@types/ws": "^7.2.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "isomorphic-ws": "^4.0.1",
     "next": "^9.4.4",
     "react": "^16.13.1",
