--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   },
   "dependencies": {
