--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "@types/ws": "^7.2.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "isomorphic-ws": "^4.0.1",
     "next": "^9.4.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "ws": "^7.3.0"
   }
