--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/qyz-project/vs-project#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.41",
@@ -56,6 +57,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "isomorphic-ws": "^4.0.1",
